<resources>
    <string name="app_name">UILearner</string>
    <string name="learner"> Learn3r</string>
    <string name="welcome_to">Welcome to</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="register">Register</string>

    <string name="username">Email:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="re_enter_password">Re-Enter Password:</string>
    <string name="show_password">Show Password</string>
    <string name="internet_not_connected">Not connected to the Internet!</string>

    <string name="auth_passed">Authorization passed!</string>
    <string name="auth_failed">Authorization failed!</string>
    <string name="verify_first">Please verify email before continuing</string>

    <string name="title_activity_agenda">Learn3r</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="timeStart">Start Time</string>
    <string name="timeEnd">End Time</string>
    <string name="events">Events</string>

    <string name="calendar">Calendar</string>
    <string name="agenda">Daily Agenda</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="reset">Reset</string>
    <string name="please_provide_the_email_linked_to_the_account">Please provide the email linked to the account:</string>
    <string name="role">Role</string>
    <string name="what_role_will_you_be_having">Are you a student or a teacher?</string>
    <string name="next">Next</string>
    <string name="adding_event">Adding event…</string>
    <string name="enter_pin">Enter Pin</string>


    <string name="new_event">New Event Info</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="event_summary">Summary</string>
    <string name="select_students">Who is this for?</string>
    <string name="confirm_event">Confirm</string>

    <string name="agenda_header">Today\'s Tasks</string>
    <string name="empty_agenda">No Tasks Today!</string>
    <string name="empty_date">No Tasks this day!</string>

    <string name="default_email">etest8163@gmail.com</string>
    <string name="default_password">Etest816</string>
    <string name="teachers">Teacher</string>
    <string name="enter_teachers_add_code">Enter Teachers Add Code</string>

    <string name="date_hint">mm/dd/yyyy</string>
    <string name="time_hint">hh:mm AM/PM</string>
    <string name="submit">submit</string>
    <string name="event_task">Checkbox Task</string>
    <string name="addTask">Add Task</string>
    <string name="add_a_task">Tap here to edit task!</string>
    <string name="tasksHeading">Tasks:</string>

</resources>
