<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:windowSoftInputMode="adjustNothing"
    android:layout_height="match_parent"
    tools:context="group7.tcss450.uw.edu.uilearner.EventFragment">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_event"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_event_name"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <EditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_event_date"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_event_name">

        <EditText
            android:id="@+id/event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_date"
            android:inputType="datetime" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_event_time"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_event_date">

        <EditText
            android:id="@+id/event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_time" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_students"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_event_summary" />

    <Button
        android:id="@+id/confirm_event"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/confirm_event"
        android:windowSoftInputMode="adjustNothing"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_event_summary"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_event_time">

        <EditText
            android:id="@+id/event_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_summary" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/selected_student_list"
        android:layout_width="234dp"
        android:layout_height="140dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_event_summary"
        tools:layout_editor_absoluteY="450dp" />

</android.support.constraint.ConstraintLayout>
