<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group7.tcss450.uw.edu.uilearner.StudentFragment"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="279dp"
        android:layout_height="47dp"
        android:layout_marginLeft="53dp"
        android:layout_marginStart="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="129dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="282dp"
        android:layout_height="41dp"
        android:layout_marginLeft="51dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@android:color/background_light"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.947" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@android:color/background_light"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="71dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="88dp"
        android:onClick="onButtonClick"
        android:text="@string/sign_in"
        app:layout_constraintLeft_toRightOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="66dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="88dp"
        android:onClick="onButtonClick"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorNotificationBar"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewStudentBanner"
        android:layout_width="244dp"
        android:layout_height="53dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:layout_marginEnd="8dp"
        android:text="@string/student"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
