<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group7.tcss450.uw.edu.uilearner.auth.ForgotPasswordFragment"
    android:background="@color/colorBackground">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/resetContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="97dp">

        <EditText
            android:id="@+id/editTextForgotPass"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/buttonResetPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetContainer"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/please_provide_the_email_linked_to_the_account"
        app:layout_constraintBottom_toTopOf="@+id/resetContainer"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="193dp"
        android:layout_height="37dp"
        android:fontFamily="casual"
        android:text="@string/forgot_password"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.502" />
</android.support.constraint.ConstraintLayout>
